getUsers fix